create an example health break video landing and adjust the template a bit

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/tables.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/tables.twig
@@ -7,36 +7,76 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th class="table__heading-cell">Type</th>
-      <th colspan="2" class="table__heading-cell">Description</th>
-      <th class="table__heading-cell">More Information</th>
+			<th class="table__heading-cell">Date</th>
+      <th colspan="2" class="table__heading-cell">Topic</th>
+      <th class="table__heading-cell">Provider</th>
 		</tr>
 	</thead>
 	<tbody>
   	<tr class="table__row">
-  		<td class="table__cell">Row 1</td>
-  		<td colspan="2" class="table__cell">Information about something</td>
-  		<td class="table__cell">And this is important</td>
+  		<td class="table__cell">July 9</td>
+  		<td colspan="2" class="table__cell"><strong>SI Joint Fusion</strong></td>
+  		<td class="table__cell"><a href="#">Ryan Michels, MD</a></td>
   	</tr>
   	<tr class="table__row">
-      <td class="table__cell">Row 2</td>
-  		<td colspan="2" class="table__cell">Information about something</td>
-  		<td class="table__cell">And this is important</td>
+      <td class="table__cell">July 23</td>
+  		<td colspan="2" class="table__cell"><strong>TowerHealth MedSpa</strong></td>
+  		<td class="table__cell"><a href="#">Christine Cho, DO</a></td>
   	</tr>
   	<tr class="table__row">
-      <td class="table__cell">Row 3</td>
-  		<td colspan="2" class="table__cell">Information about something</td>
-  		<td class="table__cell">And this is important</td>
+      <td class="table__cell">August 6</td>
+  		<td colspan="2" class="table__cell"><strong>Treatment for Peripheral Artery Disease</strong></td>
+  		<td class="table__cell"><a href="#">Hong Zheng, DO</a></td>
   	</tr>
   	<tr class="table__row">
-      <td class="table__cell">Row 4</td>
-  		<td colspan="2" class="table__cell">Information about something</td>
-  		<td class="table__cell">And this is important</td>
+      <td class="table__cell">August 20</td>
+  		<td colspan="2" class="table__cell"><strong>Glucose Monitoring through MyTowerHealth</strong></td>
+  		<td class="table__cell"><a href="#">David Tichansky, MD</a></td>
   	</tr>
+    <tr class="table__row">
+      <td class="table__cell">September 17</td>
+      <td colspan="2" class="table__cell"><strong>Adolescent/Pediatric Weight Management</strong></td>
+      <td class="table__cell"><a href="#">Renee Riddle, MD</a></td>
+    </tr>
+    <tr class="table__row">
+      <td class="table__cell">October 1</td>
+      <td colspan="2" class="table__cell"><strong>Breast Reconstruction Surgery</strong></td>
+      <td class="table__cell"><a href="#">Thomas Dooley, MD</a></td>
+    </tr>
+    <tr class="table__row">
+      <td class="table__cell">October 15</td>
+      <td colspan="2" class="table__cell"><strong>Benefits of the MRI Linear Accelerator</strong></td>
+      <td class="table__cell"><a href="#">Michael Haas, MD</a></td>
+    </tr>
+    <tr class="table__row">
+      <td class="table__cell">October 29</td>
+      <td colspan="2" class="table__cell"><strong>SIDS/Safe Sleep</strong></td>
+      <td class="table__cell"><a href="#">Brianna Weeks, MSN, RN, ACCNS-P, CPN</a></td>
+    </tr>
+    <tr class="table__row">
+      <td class="table__cell">November 12</td>
+      <td colspan="2" class="table__cell"><strong>Botox for Spasticity</strong></td>
+      <td class="table__cell"><a href="#">Mark Chai, MD</a></td>
+    </tr>
+    <tr class="table__row">
+      <td class="table__cell">November 26</td>
+      <td colspan="2" class="table__cell"><strong>Targeted Muscle Reinnervation (TMR)</strong></td>
+      <td class="table__cell"><a href="#">Leonard D'Addessi, MD</a></td>
+    </tr>
+    <tr class="table__row">
+      <td class="table__cell">December 10</td>
+      <td colspan="2" class="table__cell"><strong>Aortic Clinic</strong></td>
+      <td class="table__cell"><a href="#">Kathleen Lamb, MD</a></td>
+    </tr>
+    <tr class="table__row">
+      <td class="table__cell">December 24</td>
+      <td colspan="2" class="table__cell"><strong>Inspire Therapy</strong></td>
+      <td class="table__cell"><a href="#">Scott Cronin, MD</a></td>
+    </tr>
 	</tbody>
 	<tfoot>
 		<tr>
-			<th colspan="4" class="table__heading-cell table__footer-cell ">This is a table footer</th>
+			<th colspan="4" class="table__heading-cell table__footer-cell ">Note: Video schedule is subject to change.</th>
 		</tr>
 	</tfoot>
 </table>
