--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/appointment-form/appointment-form.twig
@@ -3,7 +3,8 @@
   top_sidebar: false,
   bottom_sidebar: false,
   full_width: false,
-  centered: true
+  centered: true,
+  page_content: true
 }%}
 
   {% block page_header %}
