--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/appointment-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/appointment-landing.twig
@@ -4,7 +4,8 @@
   bottom_sidebar: FALSE,
   full_width: FALSE,
   centered: true,
-  full_content: TRUE
+  full_content: TRUE,
+  page_content: TRUE
 }%}
 
   {% block page_header %}
