--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.twig
@@ -2,7 +2,8 @@
   page_header: TRUE,
   top_sidebar: TRUE,
   bottom_sidebar: TRUE,
-  full_width: false
+  full_width: false,
+  page_content: TRUE
 }%}
   
   {% block page_header %}
