--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
@@ -1,6 +1,7 @@
 {% embed "@templates/_default.twig" with {
   full_width: true,
-  page_header: false
+  page_header: false,
+  page_content: TRUE
 } %}
   {% block page_content %}
     
