--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.twig
@@ -1,6 +1,7 @@
 {% embed "@templates/_default.twig" with {
   page_header: TRUE,
-  full_width: true
+  full_width: true,
+  page_content: TRUE
 }%}
 
   {% block page_header %}
