--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.twig
@@ -3,7 +3,8 @@
   top_sidebar: TRUE,
   bottom_sidebar: FALSE,
   full_width: false,
-  page_background: true
+  page_background: true,
+  page_content: TRUE
 }%}
   
   {% block page_header %}
