--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.twig
@@ -3,7 +3,8 @@
   top_sidebar: TRUE,
   bottom_sidebar: TRUE,
   full_content: true,
-  full_width: false
+  full_width: false,
+  page_content: TRUE
 }%}
   
   {% block page_header %}
