--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.twig
@@ -3,7 +3,8 @@
   top_sidebar: FALSE,
   bottom_sidebar: TRUE,
   full_width: FALSE,
-  full_content: TRUE
+  full_content: TRUE,
+  page_content: TRUE
 }%}
 
   {% block page_header %}
