--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
@@ -2,7 +2,8 @@
   page_header: TRUE,
   top_sidebar: TRUE,
   full_content: TRUE,
-  full_width: false
+  full_width: false,
+  page_content: TRUE
 } %}
 
   {% block page_header %}
