JS Functionality with preliminary styling.

--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -22,6 +22,7 @@
   <script src="../../../../dist/03-organisms/listings/listing-filter/listing-filters.js"></script>
   <script src="../../../../dist/02-molecules/modal/modal.js"></script>
   <script src="../../../../dist/03-organisms/review-listing/review-listing.js"></script>
+  <script src="../../../../dist/02-molecules/review/review.js"></script>
 
   </body>
 </html>
