--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.twig
@@ -35,7 +35,7 @@
           <form class='header__search-form' id="header__search-form">
             <div class="header__search-form__container">
               <label for="header__search-input">Search our Site</label>
-              <input class="header__search-input" type="text" id="header__search-input" placeholder="Search TowerHealth">
+              <input class="header__search-input" type="text" id="header__search-input" placeholder="Search by Name, Specialty, Condition, or Location">
             </div>
             <input class="header__search-submit" type="submit" value="Search">
           </form>
