--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
@@ -23,7 +23,7 @@
 {% endif %}
 
 <div class="ratings-count">
-  {{ rating }} of 5
+  {{ rating }} out of 5
   <div class="ratings-count__stars ratings-count__stars--{{rating_round}}">
     {% include icon %}
     {% include icon %}
