--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/review-listing/review-listing.twig
@@ -1,7 +1,7 @@
 {{ attach_library('tower_health/reviews') }}
 <section id="ratings" class="review-listing js-section-animation">
   <div class="review-summary">
-    <h2 class="review-summary__title">Ratings & Reviews</h2>
+    <h2 class="review-summary__title">{{count}} Patient Comments</h2>
     <a class="review-summary__link" href="{{review_url}}">About our Ratings & Criteria</a>
     <div class="review-summary__rating">
       <span class="review-summary__label">Overall Rating</span>
