Add checks for preprocessed fields, add hours

--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
@@ -83,6 +83,7 @@
         "address2": address2,
         "phone": phone,
         "fax": fax,
+        "hours": hours,
       },
       "link": {
         "href": href,
