Added functionality - Included is the ability to click on the review text to expand full review, added fade toggle, moved "Read More" button below the review, and moved the title above with new styling.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/review.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/review.twig
@@ -2,9 +2,9 @@
 <div class='review' {% if review|length > 250 %}tabindex="0"{% endif %}>
   {% include "@molecules/ratings-count/ratings-count.twig" %}
   <div class="review__text">
+    <span class="review__date">Reviewed on {{ date }}</span>
 	<div class="review__drawer{% if review|length > 250 %} more{% endif %}" id="review-drawer--{{ loop.index }}"{% if review|length > 250 %} aria-expanded="false"{% endif %}>
 		{{ review }}
 	</div>
-    <span class="review__date">{{ date }}</span>
   </div>
 </div>
