--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
@@ -46,10 +46,10 @@
 }
 
 .review__date {
-  @include adjust-font-size-to($label, .9);
+  @include adjust-font-size-to($label, .75);
   display: block;
   margin-top: .5em;
-  font-style: italic;
+  font-weight: 600;
 }
 
 .review__drawer {
@@ -67,9 +67,18 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background: linear-gradient(to top, #f5f5f5 0%, #f5f5f5 10%, rgba(#f5f5f5, 0) 100%);
-    }
+      background: -webkit-linear-gradient(top,rgba(255,255,255,0),#f5f5f5);
+      background: linear-gradient(to bottom,rgba(255,255,255,0),#f5f5f5);    }
   }
+}
+
+.fade__review {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #fff;
+  -webkit-transition: opacity .4s ease-out;
+  transition: opacity .4s ease-out;
 }
 
 .review.test:focus-within {
@@ -91,4 +100,20 @@ a.more-link {
 
 .more-content span {
   display: none;
+}
+
+.review-expand-header {
+  position: relative;
+  width: 100%;
+  display: block;
+}
+
+.review-expand-content-fade {
+  height: 16px;
+  width: 100%;
+  position: absolute;
+  top: -16px;
+  left: 0;
+  background: -webkit-linear-gradient(top,rgba(255,255,255,0),#f5f5f5);
+  background: linear-gradient(to bottom,rgba(255,255,255,0),#f5f5f5);
 }
