--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
@@ -82,7 +82,7 @@
   list-style: none;
   padding: 0;
   margin: .5em 0 0 0;
-
+  
   &.is-active {
     display: block;
     visibility: visible;
@@ -115,6 +115,10 @@
   > .section-menu > .section-menu__item a:hover,
   > .section-menu > .section-menu__item a:active,
   > .section-menu > .section-menu__item a:focus {
+    border-left: 5px solid $trust-aa;
+  }
+  
+  > .section-menu > .section-menu__item--active > a {
     border-left: 5px solid $trust-aa;
   }
 
@@ -152,7 +156,7 @@
       width: 100%;
       font-weight: 600;
     }
-
+    
     &.is-active::before {
       content: "-";
     }
@@ -170,6 +174,10 @@
     @include breakpoint($bp3) {
       flex: 1 1 20%;
     }
+  }
+  
+  &.section-menu__item--active .expand-sub::before {
+    content: "-";
   }
 }
 
@@ -190,10 +198,18 @@
   visibility: hidden;
   margin: 0;
   padding: .75em 0;
-
+  
+  .section-menu__item--active &,
   &.is-active {
     display: block;
     visibility: visible;
+  }
+  
+  & .section-menu__item--active  {
+    > a {
+      border-left: 5px solid $trust-aa;
+      background-color: rgba($white, 0.5);
+    }
   }
 }
 
