Fixed stylelint, added actual reviews for demo purposes, added dates, tweaked titles, and changed Find a Location search placeholder.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/_ratings-count.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/_ratings-count.scss
@@ -3,10 +3,14 @@
   display: flex;
 }
 
+.review-listing__list .ratings-count__stars {
+  margin-top: .8em;
+}
+
 .ratings-count__stars {
   display: flex;
-  margin-left: .5em;
-  
+  order: 1;
+ 
   svg {
     height: 19px;
     
