--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
@@ -1,5 +1,6 @@
 .review {
   margin-bottom: 2.5em;
+  padding: .5em;
   
   .ratings-count {
     margin-bottom: 1em;
@@ -67,8 +68,9 @@
       bottom: 0;
       left: 0;
       right: 0;
-      background: -webkit-linear-gradient(top,rgba(255,255,255,0),#f5f5f5);
-      background: linear-gradient(to bottom,rgba(255,255,255,0),#f5f5f5);    }
+      background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), #f5f5f5);
+      background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #f5f5f5);
+    }
   }
 }
 
@@ -109,11 +111,11 @@ a.more-link {
 }
 
 .review-expand-content-fade {
-  height: 16px;
+  height: 25px;
   width: 100%;
   position: absolute;
-  top: -16px;
+  top: -25px;
   left: 0;
-  background: -webkit-linear-gradient(top,rgba(255,255,255,0),#f5f5f5);
-  background: linear-gradient(to bottom,rgba(255,255,255,0),#f5f5f5);
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), #f5f5f5);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #f5f5f5);
 }
