remove underline from basic header cta link

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -300,7 +300,6 @@
   
   .basic-header--img & {
     color: $white;
-    text-decoration: underline;
   }
 }
 
@@ -311,6 +310,11 @@
   text-decoration: none;
   display: inline-block;
   margin-bottom: .5em;
+  
+  &:link,
+  &:visited {
+    text-decoration: none;
+  }
   
   &:active,
   &:hover,
