update card video meta line spacing & font weight

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -109,8 +109,9 @@
 .card__meta {
   @include adjust-font-size-to($label, .9);
   display: block;
-  margin-bottom: .25em;
+  margin-bottom: .5em;
   font-style: italic;
+  font-weight: 600;
 }
 
 .card__desc {
