adjust spacing, style, and position for date information on article card

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -112,6 +112,12 @@
   margin-bottom: .5em;
   font-style: italic;
   font-weight: 600;
+  
+  .card--article & {
+    display: inline-block;
+    border-bottom: 4px solid $growth;
+    margin-bottom: 1em;
+  }
 }
 
 .card__desc {
