--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
@@ -1,9 +1,19 @@
 .review {
   margin-bottom: 2.5em;
   padding: .5em;
-  
+
   .ratings-count {
-    margin-bottom: 1em;
+    margin-bottom: .5em;
+
+    .ratings-count__stars {
+      order: 1;
+      margin-left: 0;
+    }
+
+    &--ratingof {
+      order: 2;
+      margin-left: .5em;
+    }
   }
 
   .read-less {
@@ -27,18 +37,18 @@
       max-height: none;
     }
   }
-  
+
   @include breakpoint($bp3) {
     display: flex;
     flex-wrap: nowrap;
-    
+
     .ratings-count {
       order: 2;
       flex-direction: column-reverse;
       align-items: flex-end;
       justify-content: flex-end;
       margin-left: 3em;
-      
+
       .ratings-count__stars {
         width: 100%;
       }
@@ -49,7 +59,7 @@
 .review__date {
   @include adjust-font-size-to($label, .75);
   display: block;
-  margin-top: .5em;
+  margin-bottom: .3em;
   font-weight: 600;
 }
 
@@ -91,18 +101,30 @@ a.review-more-link {
   display: none;
 }
 
-.review-expand-header {
-  position: relative;
-  width: 100%;
-  display: block;
+.review-expand {
+  &-header {
+    position: relative;
+    width: 100%;
+    display: block;
+  }
+
+  &-content-fade {
+    height: 25px;
+    width: 100%;
+    position: absolute;
+    top: -25px;
+    left: 0;
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), #f5f5f5);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #f5f5f5);
+  }
 }
 
-.review-expand-content-fade {
-  height: 25px;
-  width: 100%;
-  position: absolute;
-  top: -25px;
-  left: 0;
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0), #f5f5f5);
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #f5f5f5);
+.review-summary {
+  &__link {
+    order: 2;
+
+    @include breakpoint($bp4) {
+      order: initial;
+    }
+  }
 }
