--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/00-headings/headings.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/00-headings/headings.twig
@@ -2,7 +2,7 @@
   {% for i in 1..6 %}
     <div class="sg-pattern pl-heading-examples">
       <h3 class="sg-pattern-title">h{{ i }}</h3>
-      <h{{ i }}>This is a Header {{ i }} example</h{{ i }}>
+      <h{{ i }}>This is a Header {{ i }} example Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h{{ i }}>
     </div>
   {% endfor %}
 </div>
