update table header color

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
@@ -28,7 +28,7 @@ $table-border: $gray-light;
   padding: 1.2em;
   text-align: left;
   border-bottom: 4px solid $growth;
-  background-color: $white;
+  background-color: #eef1f9;
 }
 
 .table__row {
