--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/patient-story/_patient-story.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/patient-story/_patient-story.scss
@@ -1,9 +1,9 @@
 .patient-story {
-  margin: 2em 0;
+  margin: 3em 0 2em;
   background-color: $primary-dark;
   
   @include breakpoint($bp2) {
-    margin: 5em 0;
+    margin: 6em 0 5em;
   }
 }
 
