--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/_anchored-cta-block.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/_anchored-cta-block.scss
@@ -15,13 +15,13 @@
   padding: 3em 0;
   
   @include breakpoint($bp3) {
-    width: 70%;
-    padding-right: 4em;
+    width: 80%;
+    padding-right: 5em;
   }
   
   @include breakpoint($bp4) {
-    width: 80%;
-    padding-right: 6em;
+    width: 90%;
+    padding-right: 7em;
   }
 }
 
@@ -43,15 +43,19 @@
   
   @include breakpoint($bp3) {
     bottom: 3em;
-    left: 75%;
+    left: 82%;
+    
+    .icon-button {
+      min-width: 215px;
+    }
   }
   
   @include breakpoint($bp4) {
     bottom: 3em;
-    left: 80%;
+    left: 87%;
   }
   
   @include breakpoint($bp6) {
-    left: calc(((100vw - 1500px) / 2) + (1500px * .8));
+    left: calc(((100vw - 1500px) / 2) + (1500px * .88));
   }
 }
