--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
@@ -1,34 +1,34 @@
 <div class="provider-header">
-  
+
   {% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
     class: breadcrumb.class,
     breadcrumb: breadcrumb.breadcrumb,
   } %}
-  
+
   <div class="provider-header__content">
     <div class="provider-header__first js-section-animation">
-      
+
       <div class="provider-header__image-container">
         <div class="provider-header__image">
         <img src="{% if img %}{{img.src}}{% else %}../../images/people/provider-placeholder.png{% endif %}" alt="{{ img.alt}}">
         </div>
       </div>
-      
+
     </div>
-    
+
     <div class="provider-header__card js-section-animation">
       <div class="provider-header__card-info">
         <h1 class="provider-header__name">{{ name }}</h1>
         {% if lead_title %}
         <span class="provider-header__title">{{ lead_title }}</span>
         {% endif %}
-        
+
         {% if provider_video %}
         {% include "@molecules/modal/modal.twig" with {
           modal: provider_video
         } %}
         {% endif %}
-        
+
         {% if rating %}
         <div class="provider-header__ratings">
           {% include "@molecules/ratings-count/ratings-count.twig" %}
@@ -36,20 +36,20 @@
         </div>
         {% endif %}
       </div>
-      
+
       <div class="provider-header__cta js-section-animation">
         {% include "@atoms/icon-button/icon-button.twig" with {
           text: appt_label,
           url: appt_url,
-          icon: "th-cal.svg"
+          icon: icon
         } %}
         <span class="provider-header__cta__text">
         or call <a class="provider-header__cta__link" href="tel+1{{appt_phone.number}}">{{ appt_phone.label }}</a>
         </span>
       </div>
-      
+
     </div>
-    
+
 
   </div>
 </div>
