--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.twig
@@ -41,7 +41,7 @@
         {% include "@atoms/icon-button/icon-button.twig" with {
           text: appt_label,
           url: appt_url,
-          icon: icon
+          icon: appt_icon
         } %}
         <span class="provider-header__cta__text">
         or call <a class="provider-header__cta__link" href="tel+1{{appt_phone.number}}">{{ appt_phone.label }}</a>
