--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -84,12 +84,12 @@
         "focus": focuses,
         "location": location,
         "rating": content.field_rating_overall.0['#markup'],
-        "icon": icon_path,
+        "icon": icon,
       },
       "link": {
         "url": url,
         "text": "Request an Appointment"|t,
-        "icon": icon,
+        "icon": cal_icon,
       }
     }
 } %}
