--- a/docroot/themes/custom/tower_health/templates/content/node--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile.html.twig
@@ -77,5 +77,14 @@
       "alt": alt,
     },
     "name": label,
-    "appt_icon": icon
+    "lead_title": content.field_profile_job_title,
+    "appt_label": "Request an Appointment"|t,
+    "appt_url": "#",
+    "appt_icon": cal_icon,
+    "appt_phone": {
+      "number": content.field_profile_phone.0,
+      "label": content.field_profile_phone.0
+    },
+    "review_amt": content.field_rating_count,
+    "rating": content.field_rating_overall.0['#markup']
 } %}
