--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/fields/_multi-field-with-comma.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/fields/_multi-field-with-comma.twig
@@ -37,5 +37,5 @@
  */
 #}
 {% for item in items %}
-  {{ item }}{% if not loop.last %}, {% endif %}
+  {{ item.text }}{% if not loop.last %}, {% endif %}
 {% endfor %}
