--- a/docroot/themes/custom/tower_health/templates/content/node--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile.html.twig
@@ -71,20 +71,79 @@
  */
 #}
 
-{% include "@organisms/provider-header/provider-header.twig" with {
-    "img": {
-      "src": src,
-      "alt": alt,
-    },
-    "name": label,
-    "lead_title": content.field_profile_job_title,
-    "appt_label": "Request an Appointment"|t,
-    "appt_url": "#",
-    "appt_icon": cal_icon,
-    "appt_phone": {
-      "number": content.field_profile_phone.0,
-      "label": content.field_profile_phone.0
-    },
-    "review_amt": content.field_rating_count,
-    "rating": content.field_rating_overall.0['#markup']
+{% include "@pages/provider-detail/provider-detail.twig" with {
+  "name": label,
+  "lead_title": content.field_profile_job_title,
+  "rating": content.field_rating_overall.0['#markup'],
+  "review_amt": content.field_rating_count,
+  "img": {
+    "src": src,
+    "alt": alt,
+  },
+  "appt_label": "Request an Appointment"|t,
+  "appt_phone": {
+    "number": content.field_profile_phone.0["#title"],
+    "label": content.field_profile_phone.0["#title"]
+  },
+  "appt_url": "#",
+  "appt_icon": cal_icon,
+  "specialties": {
+    "label": "Specialties"|t,
+    "items": specialties
+  },
+  "focus": {
+    "label": "Clinical Areas of Focus"|t,
+    "info": "Lorem ipsum",
+    "info_id": "areas-focus",
+    "items": focuses
+  },
+  "locations": {
+    "label": "Locations"|t
+  },
+  "certification": {
+    "label": "Board Certifications"|t
+  },
+  "education": {
+    "label": "Education"|t
+  },
+  "language": {
+    "label": "Languages"|t,
+    "sidebar": true,
+    "items": languages
+  },
+  "contact": {
+    "label": "Contact Information",
+    "sidebar": true,
+    "items": [
+      {
+        "label": "Main:"|t,
+        "link": {
+          "text": content.field_profile_phone.0["#title"],
+          "url": content.field_profile_phone.0["#uri"]
+        }
+      },
+      {
+        "label": "Fax:"|t
+      }
+    ]
+  },
+  "insurance": {
+    "sidebar": true,
+    "items": {
+      "type": "insurance",
+      "label": "Insurances Accepted"|t,
+      "reference": "insurances",
+      "items": {
+
+      }
+    }
+  },
+  "employed": {
+    "label": "Member of"|t,
+    "sidebar": true
+  },
+  "affiliation": {
+    "label": "Hospital Affiliation"|t,
+    "sidebar": true
+  }
 } %}
