--- a/docroot/themes/custom/tower_health/templates/content/node--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile.html.twig
@@ -101,7 +101,8 @@
     "label": "Locations"|t
   },
   "certification": {
-    "label": "Board Certifications"|t
+    "label": "Board Certifications"|t,
+    "items": certifications
   },
   "education": {
     "label": "Education"|t
@@ -144,6 +145,7 @@
   },
   "affiliation": {
     "label": "Hospital Affiliation"|t,
-    "sidebar": true
+    "sidebar": true,
+    "items": affiliations
   }
 } %}
