--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/02-base/_03-mixins.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/02-base/_03-mixins.scss
@@ -164,3 +164,52 @@
   font-size: 0.9rem;
   line-height: 1.6em;
 }
+
+// =============================================================================
+// Mixin to place items on a circle
+// =============================================================================
+
+/// @author Hugo Giraudel
+/// @author Ana Tudor
+/// @param {Integer} $item-count - Number of items on the circle
+/// @param {Length} $circle-size - Large circle size
+/// @param {Length} $item-size - Single item size
+@mixin on-circle($item-count, $circle-size, $item-size) {
+  position: relative;
+  width:  $circle-size;
+  height: $circle-size;
+  padding: 0;
+  border-radius: 50%; 
+  list-style: none;       
+  
+  > * {
+    display: flex;
+    position: absolute;
+    top:  50%; 
+    left: 50%;
+    width:  $item-size;
+    height: $item-size;
+    margin: -($item-size / 2);
+  
+    $angle: (360 / $item-count);
+    $rot: 0;
+
+    @for $i from 1 through $item-count {
+      &:nth-of-type(#{$i}) {
+        transform: 
+          rotate($rot * 1deg) 
+          translate($circle-size / 2) 
+          rotate($rot * -1deg);
+          
+        &::after {
+          transform: 
+            rotate(($angle * $i) + $angle * 1deg)
+            translate(100px , -36px );
+        }
+      }
+
+      $rot: $rot + $angle;
+    }
+    
+  }
+}
