--- a/docroot/themes/custom/tower_health/templates/fields/field--field-hero-hp-image.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-hero-hp-image.html.twig
@@ -37,7 +37,7 @@
  */
 #}
 {% for item in items %}
-  {% set image_src = file_url(item.content['#media'].field_media_image.entity.uri.value) %}
+  {% set image_src = item.content['#media'].field_media_image.entity.uri.value|image_style('900x900') %}
   {% set image_alt = item.content['#media'].field_media_image.alt %}
   {% include "@molecules/image-background/image-background.twig" with {
     "img": {
