--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
@@ -25,153 +25,157 @@
     margin-top: 5em;
   }
 
-  .cta-banner__image {
-    width: 100%;
-    position: absolute;
-    top: 0;
+  h1 {
+    @extend %track-in;
+    @include adjust-font-size-to($xl-heading, 1.45);
+    margin: 0;
+    line-height: 1.05em;
+
+    @include breakpoint($bp0) {
+      @include adjust-font-size-to($xxl-heading, 1.5);
+    }
+
+    @include breakpoint($bp3) {
+      @include adjust-font-size-to($xxxl-heading, 1.75);
+    }
+  }
+}
+
+.cta-banner__image {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  overflow: hidden;
+
+  .image-background {
+    position: relative;
+    max-width: 700px;
+    width: 90%;
+    left: -20%;
+  }
+
+  @include breakpoint($bp2) {
+    width: 80%;
+  }
+
+  @include breakpoint($bp3) {
+    z-index: 5;
+    right: 53%;
     left: 0;
-    z-index: -10;
-    overflow: hidden;
+    top: -9em;
+    width: auto;
 
     .image-background {
       position: relative;
-      max-width: 700px;
-      width: 90%;
-      left: -20%;
-    }
-
-    @include breakpoint($bp2) {
-      width: 80%;
-    }
-
-    @include breakpoint($bp3) {
-      z-index: 5;
-      right: 53%;
-      left: 0;
-      top: -9em;
-      width: auto;
-
-      .image-background {
-        position: relative;
-        width: 150%;
-        max-width: 625px;
-        float: right;
-        left: auto;
-      }
-    }
-
-    @include breakpoint($bp4) {
-      right: 50%;
-      top: -11em;
-    }
-    
-    @include breakpoint($bp5) {
-      right: 52%;
-    }
-
-    @include breakpoint($bp6) {
-      left: calc(( 100vw - 1500px ) / 2 * -1);
-      right: 58%;
-      
-      .image-background {
-        max-width: 650px;
-      }
-    }
-  }
-
-  .cta-banner__content {
-    position: relative;
-    background-color: $white;
-    border-top: 4px solid $trust-ltr;
-    border-left: 4px solid $trust-ltr;
-    border-bottom: 4px solid $trust-ltr;
-    border-radius: $rd-brd-sm 0 0 $rd-brd-sm;
-    width: 96%;
-    padding: 2em 2em 3em;
-    margin-top: 20%;
-    margin-left: 4%;
-    box-shadow: $shadow;
-
-    @include breakpoint($bp0) {
-      width: 90%;
-      margin-top: 35%;
-      margin-left: 10%;
-    }
-
-    @include breakpoint($bp2) {
-      border: 4px solid $trust-ltr;
-      border-radius: $rd-brd-sm;
-      margin-top: 30%;
-      display: inline-block;
+      width: 150%;
+      max-width: 625px;
       float: right;
-      width: auto;
-      max-width: 90%;
-      padding: 2em 2em 3em;
-    }
-
-    @include breakpoint($bp3) {
-      margin-top: 0;
-      box-shadow: none;
-      float: none;
-      display: block;
-      padding: 3em 2em 4em 40%;
-    }
-
-    @include breakpoint($bp4) {
-      padding: 2.5em 2em 3.5em 45%;
-    }
-    
-    @include breakpoint($bp5) {
-      padding: 2.5em 2em 3.5em 42%;
-    }
-    
-    @include breakpoint($bp6) {
-      padding: 2.5em 2em 3.5em 36%;
-    }
-
-    .button {
-      position: absolute;
-      bottom: -1.5em;
-      right: 2em;
-    }
-
-    .cta-banner__title {
-      @extend %track-in;
-      @include adjust-font-size-to($xl-heading, 1.45);
-      color: $primary-dark;
-      text-transform: uppercase;
-      margin: 0;
-      font-weight: 300;
-      
-      @include breakpoint($bp0) {
-        @include adjust-font-size-to($xxl-heading, 1.5);
-      }
-      
-      @include breakpoint($bp3) {
-        @include adjust-font-size-to($xxxl-heading, 1.75);
-      }
-
-      span {
-        display: block;
-        line-height: 1.05em;
-        
-        &:last-child {
-          font-weight: 600;
-        }
-      }
-    }
-    
-    .cta-banner__subtitle {
-      display: block;
-      margin-top: 1em;
+      left: auto;
     }
   }
+
+  @include breakpoint($bp4) {
+    right: 50%;
+    top: -11em;
+  }
+
+  @include breakpoint($bp5) {
+    right: 52%;
+  }
+
+  @include breakpoint($bp6) {
+    left: calc(( 100vw - 1500px ) / 2 * -1);
+    right: 58%;
+
+    .image-background {
+      max-width: 650px;
+    }
+  }
+}
+
+.cta-banner__content {
+  position: relative;
+  background-color: $white;
+  border-top: 4px solid $trust-ltr;
+  border-left: 4px solid $trust-ltr;
+  border-bottom: 4px solid $trust-ltr;
+  border-radius: $rd-brd-sm 0 0 $rd-brd-sm;
+  width: 96%;
+  padding: 2em 2em 3em;
+  margin-top: 20%;
+  margin-left: 4%;
+  box-shadow: $shadow;
+
+  @include breakpoint($bp0) {
+    width: 90%;
+    margin-top: 35%;
+    margin-left: 10%;
+  }
+
+  @include breakpoint($bp2) {
+    border: 4px solid $trust-ltr;
+    border-radius: $rd-brd-sm;
+    margin-top: 30%;
+    display: inline-block;
+    float: right;
+    width: auto;
+    max-width: 90%;
+    padding: 2em 2em 3em;
+  }
+
+  @include breakpoint($bp3) {
+    margin-top: 0;
+    box-shadow: none;
+    float: none;
+    display: block;
+    padding: 3em 2em 4em 40%;
+  }
+
+  @include breakpoint($bp4) {
+    padding: 2.5em 2em 3.5em 45%;
+  }
+
+  @include breakpoint($bp5) {
+    padding: 2.5em 2em 3.5em 42%;
+  }
+
+  @include breakpoint($bp6) {
+    padding: 2.5em 2em 3.5em 36%;
+  }
+
+  .button {
+    position: absolute;
+    bottom: -1.5em;
+    right: 2em;
+  }
+}
+
+.cta-banner__title {
+  color: $primary-dark;
+  display: block;
+  text-transform: uppercase;
+  word-wrap: break-word;
+}
+
+.cta-banner__title--top {
+  font-weight: 300;
+}
+
+.cta-banner__title--bottom {
+  font-weight: 600;
+}
+
+.cta-banner__subtitle {
+  display: block;
+  margin-top: 1em;
 }
 
 // Animations
 
 .cssanimations {
-  
+
   // default states
   .cta-banner__content {
     opacity: 0;
@@ -179,7 +183,7 @@
     &::before {
       opacity: 0;
     }
-    
+
     @include breakpoint($bp3) {
       .cta-banner__title,
       .cta-banner__subtitle,
@@ -188,46 +192,46 @@
       }
     }
   }
- 
+
   .cta-banner__image {
     opacity: 0;
-    
+
     .image-background.bottom-left .image::before {
       margin-left: -30px;
       margin-top: -10px;
     }
   }
-  
+
   // animating in
   .in-view {
     .cta-banner__content {
       @include transition(all, .5s, ease-in);
       opacity: 1;
-      
+
       @include breakpoint(0 899px) {
         animation: fadeInRight .65s ease-in-out forwards;
       }
-      
+
       &::before {
         @include transition(opacity, .85s, ease-out);
         opacity: 1;
       }
-      
+
       @include breakpoint($bp3) {
         .button {
           animation: fadeInUp .5s ease-in-out  .35s forwards;
         }
-        
+
         .cta-banner__title,
         .cta-banner__subtitle {
           animation: fadeInUp .5s ease-in-out  .15s forwards;
         }
       }
     }
-    
+
     .cta-banner__image {
       animation: fadeInLeftScale .65s ease-in-out forwards;
-      
+
       .image-background.bottom-left .image::before {
         transition: all .25s ease .25s;
         margin-left: -20px;
