--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
@@ -1,24 +1,25 @@
 <section class="cta-banner js-section-animation">
   <div class="cta-banner__image">
-    {% include "@molecules/image-background/image-background.twig" with {
-      "img.src": img.src,
-      "img.src": img.alt,
-      "classes": classes,
-    } %}
+    {% block image_background %}
+      {% include "@molecules/image-background/image-background.twig" with {
+        "img.src": img.src,
+        "img.src": img.alt,
+        "classes": classes,
+      } %}
+    {% endblock %}
   </div>
   <div class="cta-banner__content">
-  
-    <h1 class="cta-banner__title">
-      {% if title_1 %}
-      <span>{{ title_1 }}</span>
+    <h1>
+      {% if title__top %}
+        <span class="cta-banner__title cta-banner__title--top">{{ title__top }}</span>
       {% endif %}
-      <span>{{ title_2 }}</span>
+      <span class="cta-banner__title cta-banner__title--bottom">{{ title__bottom }}</span>
     </h1>
     {% if subtitle %}
     <span class="cta-banner__subtitle">
       {{ subtitle }}
     </span>
-    {% endif %} 
+    {% endif %}
     <a class="button button--alt" href="{{ button.url }}">{{ button.label }}</a>
   </div>
 </section>
